<resources>
    <string name="app_name">Activity Lifecycle</string>

    <!-- Scenario Activity A -->
    <string name="scenario_title">Activity Lifecycle Scenario %1$d</string>
    <string name="step1">Step 1:</string>
    <string name="step2">Step 2:</string>
    <string name="step3">Step 3:</string>

    <!-- Scenario 1 -->
    <string name="scenario1">Scenario 1:</string>
    <string name="scenario1_details">Start an Activity, Press Home Button and Open the App again</string>
    <string name="scenario1_step1">Start an Activity</string>
    <string name="scenario1_step2">Press Home Button</string>
    <string name="scenario1_step3">Open the App again</string>

    <!-- Scenario 2 -->
    <string name="scenario2">Scenario 2:</string>
    <string name="scenario2_details">Call finish() method in onCreate() method</string>
    <string name="scenario2_step1">finish() method called in onCreate() method</string>

    <!-- Scenario 3 -->
    <string name="scenario3">Scenario 3:</string>
    <string name="scenario3_details">Start an Activity and Press Home Button or Back Button in Toolbar</string>
    <string name="scenario3_step1">Start an Activity</string>
    <string name="scenario3_step2">Press Home Button or Back Button in Toolbar</string>

</resources>
